#323 Enabled PK to install go tools automatically if required.